--- a/Warehouse/js/blockJS/package.json
+++ b/Warehouse/js/blockJS/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bs58": "^4.0.1",
-    "loom-js": "^1.32.0"
+    "loom-js": "^1.32.0",
+    "web3": "^1.0.0-beta.36"
   }
 }
